IAM-10558 Fix for addressing keyboard accessibility and colour contrast issue for pagination component

--- a/packages/platform-enduser/src/scss/main.scss
+++ b/packages/platform-enduser/src/scss/main.scss
@@ -197,22 +197,6 @@ label {
   padding-right: 1.875rem;
 }
 
-/*
-  Paginator Styles
- */
-.pagination {
-  border-radius: 0;
-
-  .page-link {
-    border-radius: $pagination-border-radius;
-    margin-left: 4px;
-  }
-
-  .disabled.page-item {
-    opacity: 0.5;
-  }
-}
-
 .form-label-group {
   position: relative;
 }
