--- a/packages/platform-shared/src/scss/example-theme.scss
+++ b/packages/platform-shared/src/scss/example-theme.scss
@@ -355,7 +355,6 @@ $pagination-color: $text-muted;
 $pagination-bg: $card-bg;
 $pagination-border-color: transparent;
 $pagination-disabled-border-color: transparent;
-$pagination-border-radius: $border-radius;
 $pagination-hover-bg: $gray-100;
 $pagination-hover-border-color: transparent;
 $pagination-active-border-color: transparent;
